# aoc-utils

./: .gitignore  Cargo.toml  flake.nix  readme.md  rustfmt.toml
aoc-cli/: Cargo.toml
aoc-cli/src/: config.rs  main.rs  utils.rs
aoc-lib/: Cargo.toml
aoc-lib/src/: algo.rs  grid.rs  iter.rs  lib.rs
