[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = { workspace = true }
dotenvy = "0.15.7"
reqwest = { version = "0.11.27", features = ["rustls-tls", "blocking", "cookies"], default-features = false }
